# Design-Patterns

./: Decorator.cpp  Observer.cpp  Readme  Strategy.cpp
Factory Pattern/: CMakeLists.txt  CMakePresets.json  main.cpp
Factory Pattern/inc/: Button.h  ButtonFactory.h  MacButton.h  WindowsButton.h
Factory Pattern/src/: ButtonFactory.cpp  MacButton.cpp  WindowsButton.cpp
